# external-package-example

./: .gitignore  LICENSE  README.md  pyproject.toml
example_package/: __init__.py  cog.py
